Refactor some generics, iterators and other issues
Signed-off-by: Alexander Kriegisch <Alexander@Kriegisch.name>